<resources>
    <string name="app_name">NotesTodo</string>
    <string name="notes_list">Notes list</string>
    <string name="add_list">Add List</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_list">Todo list</string>
    <string name="add_todo_item">Add Todo Item</string>
    <string name="enter_todo_item">Enter todo item</string>
    <string name="add">Add</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="delete_message">Do you want to delete the notes?</string>
    <string name="removed">Deleted</string>
</resources>