<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_todo_item"
        android:textSize="30sp"
        android:layout_margin="@dimen/margin_10dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notes"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/etNotes"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_todo_item"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/etTodoItem"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10dp"/>

</LinearLayout>
</layout>