<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNotes"
        android:text="@string/notes"
        android:textSize="30sp"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTodoItem"
        android:text="@string/todo_list"
        android:textSize="30sp"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/tvNotes"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/tvEdit"
        android:textSize="30sp"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/tvDelete"
        android:textSize="30sp"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdit"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>