<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/add_list"
        android:id="@+id/tvAddList"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notes"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/etNotes"
        app:layout_constraintTop_toBottomOf="@id/tvAddList"/>

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/enter_todo_item"-->
<!--        android:layout_margin="@dimen/margin_10dp"-->
<!--        android:id="@+id/etTodoItem"-->
<!--        app:layout_constraintTop_toBottomOf="@id/etNotes"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddTodoItems"
        app:layout_constraintTop_toBottomOf="@id/etNotes"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_todo_item"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvTodoItems"
        app:layout_constraintTop_toBottomOf="@id/btnAddTodoItems"
        android:layout_margin="@dimen/margin_10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/rvTodoItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/rvAddUpdateList"-->
<!--        android:layout_margin="@dimen/margin_10dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvAddList"/>-->

<!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:id="@+id/fabAddUpdate"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    android:layout_margin="@dimen/margin_10dp"-->
<!--    android:src="@drawable/baseline_add_24"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>